package DED.Entite;

public class Humain extends Race{

    private final String m_nom;
    protected Integer m_vie;
    protected Integer m_force;
    protected Integer m_dexterite;
    protected Integer m_vitesse;
    protected Integer m_initiative;

    public class Humain(String nom){


    }

}
