package ded.entite;

public class Espece extends Monstre{
}
