package ded.entite;

public class Monstre {
}
