package ded.objet;

public class Arme {
}
