package ded.objet;

public class Armure {
}
