package ded.objet;

public enum TypeArme {
}
